base/observability/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: observability
  labels:
    app: grafana
    component: observability
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: grafana
      protocol: TCP
      name: grafana
  selector:
    app: grafana
